update style body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Relógio Tempo Real</title>
 </head>
+<!--
+    git add .
+    git commit -m "uptade title(tag modificada)"
+    git push origin main
+-->
 <body>
     <div class="relogio">
         <div>
